# cv-final-project

./: .envrc  .gitignore  CLAUDE.md  METRICS_REPORT.md  PROMPT.md  REPORT.md  TASK_SUMMARY.md  eval_results_500.json  eval_results_8metrics.json  eval_results_8metrics_spectral.npz  eval_results_baselines.json  noresm_eval_results_500.json  noresm_eval_results_8metrics.json  noresm_eval_results_8metrics_spectral.npz  pyproject.toml
.ralph/: current-events  current-loop-id  events-20260503-015509.jsonl  events-20260505-201351.jsonl  history.jsonl
.ralph/agent/: decisions.md  handoff.md  memories.md  scratchpad.md  summary.md  tasks.jsonl
experiments/flow-matching-alternatives/: 2026-05-06-research4-report.md  PROMPT.md  decisions.md  memories.md  scratchpad.md  task_summary.md
experiments/flow-matching-zscore-normalization/: 2026-05-06-research6-report.md  decisions.md  scratchpad.md  task_summary.md
experiments/pretrained-sr-downscaling/: 2026-05-07-research5-pretrained-sr-report.md  PROMPT.md  scratchpad.md  task_summary.md
experiments/spatial-4x-flow-matching/: task_summary.md
models/flow_ns03/: flow_config.pth
notes/: 2026-04-27-foundation-models-vs-downscaling.md  2026-04-29-paper-code-weights-compute.md  2026-05-02-cv-project-outline.md  2026-05-02-flow-matching-downscaling.md  2026-05-05-cross-comparison.md  2026-05-05-ralph-hang-diagnosis.md  2026-05-05-spatial-4x-crps-experiment.md  2026-05-06-research3-report.md  2026-05-06-research4-report.md  2026-05-06-research6-report.md  2026-05-07-research5-pretrained-sr-report.md  2026-05-09-spatial-4x-30min-diagnosis.md  2026-05-11-anvita-checkpoint-comparison.md  2026-05-11-artifact-provenance.md
papers/: 2020-06-19 Denoising Diffusion Probabilistic Models.md  2021-04-15 Image Super-Resolution via Iterative Refinement.md  2021-08-23 SwinIR Image Restoration Using Swin Transformer.md  2021-10-08 Score-based Diffusion Models for Accelerated MRI.md  2021-11-10 Palette Image-to-Image Diffusion Models.md  2021-12-20 High-Resolution Image Synthesis with Latent Diffusion Models.md  2022-04-07 Video Diffusion Models.md  2022-06-01 Elucidating the Design Space of Diffusion-Based Generative Models.md  2022-07-26 Classifier-Free Diffusion Guidance.md  2022-08-08 Hard-Constrained Deep Learning for Climate Downscaling.md  2022-10-06 Flow Matching for Generative Modeling.md  2023-01-24 ClimaX A Foundation Model for Weather and Climate.md  2023-03-02 Consistency Models.md  2023-04-18 Align your Latents High-Resolution Video Synthesis with Latent Diffusion Models.md  2023-05-23 Fourier Neural Operators for Arbitrary Resolution Climate Data Downscaling.md  2023-08-02 Multi-variable Hard Physical Constraints for Climate Model Downscaling.md  2023-09-11 HAT Hybrid Attention Transformer for Image Restoration.md  2023-09-24 Residual Corrective Diffusion Modeling for Km-scale Atmospheric Downscaling.md  2023-12-06 DiffusionSat A Generative Foundation Model for Satellite Imagery.md  2023-12-11 Precipitation Downscaling with Spatiotemporal Video Diffusion.md  2024-03-21 Physics-Informed Diffusion Models.md  2024-04-01 Video Interpolation with Diffusion Models.md  2024-04-05 Conditional Diffusion Models for Downscaling and Bias Correction of ESM Precipitation.md  2024-04-27 Generative Diffusion-Based Downscaling for Climate.md  2024-05-20 A Foundation Model for the Earth System.md  2024-05-31 Climate Variable Downscaling with Conditional Normalizing Flows.md  2024-09-18 Denoising Diffusion Models for High-Resolution Microscopy Image Restoration.md  2024-09-20 Prithvi WxC Foundation Model for Weather and Climate.md  2024-10-01 Downscaling Extreme Precipitation with Wasserstein Regularized Diffusion.md  2024-10-02 Dynamical-generative downscaling of climate model ensembles.md  2024-11-08 WeatherGFM Learning A Weather Generalist Foundation Model via In-context Learning.md  2024-12-19 Downscaling Precipitation with Bias-informed Conditional Diffusion Model.md  2025-02-03 A Generative Foundation Model for All-in-One Seismic Processing.md  2025-06-12 Vision Transformers for Multi-Variable Climate Downscaling.md  2025-12-16 An intercomparison of generative machine learning methods for downscaling precipitation at fine spatial scales.md  2026-02-13 High-Resolution Climate Projections Using Diffusion-Based Downscaling of a Lightweight Climate Emulator.md  2026-03-04 Climate Downscaling with Stochastic Interpolants.md  2026-03-23 IPSL-AID Generative Diffusion Models for Climate Downscaling from Global to Regional Scales.md  2026-04-03 Physics-Constrained Adaptive Flow Matching for Climate Downscaling.md
ralph/: build.yml
reports/: iteration-001-baselines.md  iteration-001.md  iteration-002-diffusion.md  iteration-002.md  iteration-003-constraints.md  iteration-003.md  iteration-004-flow-matching.md  iteration-004.md  iteration-005-attention.md  iteration-006-cfg.md
results/: eval_200samples.json  eval_baselines_full.json  eval_results.json  solver_comparison.json
scripts/: cc-session-id.sh  check_ensemble_collapse.py  compare_anvita.py  compute_metrics.py  container.sh  diagnose_anvita_gan.py  dlon-ohol-ablation.sbatch  eval_all.py  eval_aug.sh  eval_aug_quick.sh  eval_comprehensive.sh  eval_crps.py  eval_era5.sh  eval_era5_sbatch.sh  eval_flow_v2.sh  eval_flow_v3.sh  eval_flow_v4.sh  eval_flow_v4_normal.sh  eval_noresm.sh  eval_srun.sh  eval_swinir_only.py  eval_v2_sweep.sh  eval_v2_tta.sh  eval_v4_v2_sbatch.sh  evaluate_all.py  flow_downscale.py  flow_matching.py  flow_matching_v2.py  flow_matching_v3.py  flow_matching_v4.py  gen_arch_diagrams.py  gpu_run.py  gpu_run.sh  inspect_anvita.py  make_figures.py  regen_flow_none.sh  run_baselines.sh  run_cnn_baselines.sh  run_ensemble_check.sh  run_eval.py  (+18 more)
skills/long-running-commands/: SKILL.md
skills/slurm-preemptable/: CLAUDE.md  (+1 more)
tests/: conftest.py  test_baselines.py  test_constraints.py  test_data.py  test_distribution.py  test_evaluation.py  test_metrics.py  test_models.py  test_pipeline.py  test_spectral.py  test_spectral_plots.py  test_swinir.py  test_training.py  test_visualization.py
(+98 files in other folders)
