[project]
name = "climate-downscaling"
version = "0.1.0"
description = "Hard-constrained deep learning for climate downscaling with modern generative models"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "einops>=0.8.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "spandrel>=0.4.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
data = [
    "gcsfs>=2026.3.0",
    "gdown>=6.0.0",
    "huggingface-hub>=1.12.2",
    "netcdf4>=1.7.4",
    "xarray>=2026.4.0",
    "zarr>=3.1.6",
]
train = [
    "wandb>=0.26.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/downscaling"]

# --- Ruff ---
[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["downscaling"]

# --- Black ---
[tool.black]
line-length = 100
target-version = ["py314"]

# --- isort ---
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["downscaling"]

# --- basedpyright ---
[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateImportUsage = false
include = ["src", "tests"]

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

# --- coverage ---
# Full coverage (90%+) requires GPU — model/sampling/training tests are GPU-only.
# CPU-only coverage: ~50% (metrics, constraints, data, visualization are 100%).
[tool.coverage.run]
source = ["downscaling"]
omit = [
    "*/__main__.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    "pass",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "black>=26.3.1",
    "coverage>=7.13.5",
    "isort>=8.0.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
