[project]
name = "climate-downscaling"
version = "0.1.0"
description = "Hard-constrained deep learning for climate downscaling with flow matching"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "einops>=0.8.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "rich>=15.0.0",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "spandrel>=0.4.2",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.29.0",
    "black>=25.0.0",
    "coverage>=7.0.0",
    "isort>=6.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/downscaling"]

# --- Tool Configuration ---

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["downscaling"]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["downscaling"]

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["experiments", "external"]
reportMissingImports = "warning"
reportMissingTypeStubs = "none"
reportPrivateImportUsage = "none"       # PyTorch stubs are incomplete
reportGeneralTypeIssues = "warning"     # ModuleList iteration false positives

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/downscaling"]
omit = ["*/tests/*", "*/__main__.py", "*/plotting/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
]
